Fix timer legibility

--- a/client/src/assets/styles/components/spitbox.scss
+++ b/client/src/assets/styles/components/spitbox.scss
@@ -392,8 +392,8 @@ button#timer{
 }
 
 .base-timer__path-elapsed {
-  stroke-width: 7px;
-  stroke: $dark-background;
+  stroke-width: 3px;
+  stroke: $light-background;
 }
 
 .base-timer__path-remaining {
@@ -425,11 +425,12 @@ button#timer{
   justify-content: center;
   font-size: 38px;
   color: $green;
-  text-shadow: 0px 0px 3px rgba(0,0,0,0.8);
-  background: rgba(0,0,0,0.1);
+  text-shadow: 0 0 3px rgba(0,0,0,0.8);
+  background: rgba(23,20,32, 1);
   border-radius: 50%;
   z-index: -1;
   font-weight: 700;
+  transform: scale(0.9);
   &.info{
     color: #01AD26;
   }
